fix: Align text to center of button

--- a/styles.css
+++ b/styles.css
@@ -166,6 +166,9 @@ p:has(input:checked) {
 
 label {
     flex: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 /* ---- End of form styling ---- */
